Revert "LPS-64048 - Remove alert padding to prevent it from blocking clickable areas behind"
This reverts commit bc2d6ed14b8abb4d1b3e1c06a8f995a4a2aca8e9.

--- a/modules/apps/foundation/frontend-css/frontend-css-web/src/main/resources/META-INF/resources/taglib/_alert.scss
+++ b/modules/apps/foundation/frontend-css/frontend-css-web/src/main/resources/META-INF/resources/taglib/_alert.scss
@@ -16,10 +16,5 @@
 	.lfr-alert-wrapper {
 		margin-bottom: 5px;
 		overflow: hidden;
-
-		&.container-fluid-1280 {
-			max-width: 1250px;
-			padding: 0;
-		}
 	}
 }
